Your commit message

--- a/src/grid_map/grid_map_core/CMakeLists.txt
+++ b/src/grid_map/grid_map_core/CMakeLists.txt
@@ -17,7 +17,7 @@ grid_map_package()
 ## Build ##
 ###########
 
-## Declare a cpp library
+## Declare a C++ library
 add_library(${PROJECT_NAME}
   src/GridMap.cpp
   src/GridMapMath.cpp
@@ -57,17 +57,39 @@ install(
   RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
-# Mark cpp header files for installation
+# Mark C++ header files for installation
 install(
   DIRECTORY include/
   DESTINATION include/${PROJECT_NAME}
   FILES_MATCHING PATTERN "*.hpp"
 )
 
-# Mark other files for installation
+# Mark other files (documentation, etc.) for installation
 install(
   DIRECTORY doc
   DESTINATION share/${PROJECT_NAME}
+)
+
+#############
+## Config Files ##
+#############
+
+# Configure the package config files using the templates.
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/GridMapCoreConfig.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/grid_map_coreConfig.cmake"
+  @ONLY
+)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/GridMapCoreConfigVersion.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/grid_map_coreConfigVersion.cmake"
+  @ONLY
+)
+
+# Install the generated configuration files.
+install(
+  FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/grid_map_coreConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/grid_map_coreConfigVersion.cmake"
+  DESTINATION lib/cmake/${PROJECT_NAME}
 )
 
 #############
@@ -75,23 +97,15 @@ install(
 #############
 
 if(BUILD_TESTING)
-  # Linting is setup this way to add a filter
-  # to ament_cpplint to ignore the lack of
-  # copyright messages at the top of files.
-  # Copyright messages are being checked for by both
-  # ament_cmake_cpplint & ament_cmake_copyright.
-
+  # Setup linting with ament_cpplint.
   find_package(ament_lint_auto REQUIRED)
   find_package(ament_lint_auto QUIET)
   if(ament_lint_auto_FOUND)
-    # exclude copyright checks
     list(APPEND AMENT_LINT_AUTO_EXCLUDE
       ament_cmake_cpplint
       ament_cmake_copyright
     )
     ament_lint_auto_find_test_dependencies()
-
-    # run cpplint without copyright filter
     find_package(ament_cmake_cpplint)
     ament_cpplint(
       FILTERS -legal/copyright -build/include_order
@@ -101,7 +115,7 @@ if(BUILD_TESTING)
 
   find_package(ament_cmake_gtest REQUIRED)
 
-  ## Add gtest based cpp test target and link libraries
+  ## Add gtest based C++ test target and link libraries
   ament_add_gtest(${PROJECT_NAME}-test
     test/test_grid_map_core.cpp
     test/test_helpers.cpp
@@ -119,14 +133,12 @@ if(BUILD_TESTING)
     test/SpiralIteratorTest.cpp
     test/SlidingWindowIteratorTest.cpp
   )
-endif()
-
-if(TARGET ${PROJECT_NAME}-test)
-  target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+  if(TARGET ${PROJECT_NAME}-test)
+    target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+  endif()
 endif()
 
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_dependencies(Eigen3)
-ament_package(CONFIG_EXTRAS
-  cmake/${PROJECT_NAME}-extras.cmake
-)
+ament_package(CONFIG_EXTRAS cmake/${PROJECT_NAME}-extras.cmake)
+
